[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/font/Ink Stamp.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/util/geometry/rope/wrappable_rope_2d.gd" type="Script" id=2]
[ext_resource path="res://src/util/geometry/rope/point_loader.gd" type="Script" id=3]
[ext_resource path="res://src/util/geometry/rope/state_saver.gd" type="Script" id=4]
[ext_resource path="res://src/util/geometry/rope/wrappable_rope_2d_controller.gd" type="Script" id=5]
[ext_resource path="res://src/util/geometry/rope/wrappable_rope_2d_renderer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="bi_rope" type="Node2D"]
script = ExtResource( 2 )

[node name="bi_rope_controller" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="point_loader" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="state_saver" type="Node2D" parent="."]
script = ExtResource( 4 )
camera_path = NodePath("../../Camera2D")
rope_path = NodePath("..")

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="bi_rope_debug_renderer" type="Node2D" parent="canvas_layer"]
script = ExtResource( 6 )
debug_font = SubResource( 1 )
camera_path = NodePath("../../../Camera2D")
rope_path = NodePath("../..")

[connection signal="check" from="." to="canvas_layer/bi_rope_debug_renderer" method="_on_bi_rope_check"]
[connection signal="join" from="." to="canvas_layer/bi_rope_debug_renderer" method="_on_bi_rope_join"]
[connection signal="scanned_points" from="." to="canvas_layer/bi_rope_debug_renderer" method="_on_bi_rope_scanned_points"]
[connection signal="split" from="." to="canvas_layer/bi_rope_debug_renderer" method="_on_bi_rope_split"]
[connection signal="step_begin" from="." to="canvas_layer/bi_rope_debug_renderer" method="_on_bi_rope_step_begin"]
[connection signal="step_end" from="." to="canvas_layer/bi_rope_debug_renderer" method="_on_bi_rope_step_end"]
[connection signal="updated" from="." to="canvas_layer/bi_rope_debug_renderer" method="_on_bi_rope_updated"]
